force-app/main/default/objects/SVMXC__SPM_Schedul_Tech_Utilization_Constraints__c/SVMXC__SPM_Schedul_Tech_Utilization_Constraints__c.object-meta.xml
<CustomObject>
    <description>This object will used for reporting on the values of Constraints, Cost factors &amp; Prioritization for Scheduling  runs.</description>
    <label>SPM Schedul Tech Utilization Constraints</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM Schedul Tech Utilization Constraints</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>