force-app/main/default/objects/SVMXC__SPM_Schedul_Tech_Utilization_Constraints__c/fields/SVMXC__Dispatch_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Dispatch_Process_Name__c</fullName>
    <description>Name of the Dispatch Process holding the Scheduling configuration</description>
    <inlineHelpText>Name of the Dispatch Process holding the Scheduling configuration</inlineHelpText>
    <label>Dispatch Process Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>