force-app/main/default/objects/SVMXC__SPM_Schedul_Tech_Utilization_Constraints__c/fields/SVMXC__Horizon_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Horizon_End_Date__c</fullName>
    <description>Events creation End Date</description>
    <inlineHelpText>Events creation End Date</inlineHelpText>
    <label>Horizon End Date</label>
    <type>Date</type>
</CustomField>