force-app/main/default/objects/SVMXC__SPM_Schedul_Tech_Utilization_Constraints__c/fields/SVMXC__Priority4__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Priority4__c</fullName>
    <description>Fourth Priority of the Work Order</description>
    <inlineHelpText>Fourth Priority of the Work Order</inlineHelpText>
    <label>Priority4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>