force-app/main/default/objects/SVMXC__SPM_Schedul_Tech_Utilization_Constraints__c/fields/SVMXC__Utilization_Count__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Utilization_Count__c</fullName>
    <description>Count of averages computed for every run</description>
    <inlineHelpText>Count of averages computed for every run</inlineHelpText>
    <label>Utilization Count</label>
    <summaryForeignKey>SVMXC__SPM_Scheduling_Technician_Utilization__c.SVMXC__SPM_Schedul_Tech_Utilization_Constraints__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>